--- a/config/database.yml
+++ b/config/database.yml
@@ -12,9 +12,10 @@ default: &default
 development:
   <<: *default
   host: localhost
+  adapter: postgresql
+  database: personas
   user: akskumar
   password: changeme
-  database: personas
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
